<resources>
    <string name="app_name">DelivMap1.0</string>
    <string name="email">email</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="m144_138_5c0_6_3_0_3_11_5_0_7_11_5_0_5_0_1_7_0_7_2_7_1_5_2_6_2_11_1_1_9_14_5_0_1_9_4_5_6_9_7_21_8_0_5_27_9_3_3_2_1_11_7_2_2_14_9_0_1_3_2_3_5_2_3_5_0_1_0_1_1_1_2_1_5_5_1_5l5_0_0_5_0_4_9_5_4_9c3_7_3_8_5_7_5_8_2_5_1_8_5_0_4_13_8_1_16_7_4_5_2_2_4_3_1_1_9_3_1_1_4_0_2_9_0_1_3_5_3l5_0_0_25_5_0_25_5_5_0_5_0_0_14c0_13_7_0_7_16_4_3_11_9_1_9_3_5_7_5_9_12_8_5_9_6_4_0_10_1_7_14_1_6_7l_3_1_3_8_0_15_3_0_15_2_5_0_5_0_0_11_5zm175_1_154c1_0_6_1_9_1_7_1_9_2_5_0_1_2_1_4_1_5_6_1_5_4_3_0_6_0_4_6_1_3_0_3_4_5_8_4_9_10_1_2_7zm142_6_157_7c2_2_7_1_7_8_0_6_10_3_3_3_3_3_10_2_4_11_9_1_6_1_7_3_8_1_3_6_3_1_5_9_1_2_1_2_1_3_2_2_4_6_1_2_1_9_0_4_4_1_1_4_4_9_2_4zm187_166_8c0_3_9_0_6_4_2_4_2_2_5_2_8_1_4_3_3_1_4_5_8_0_1_1_6_0_9_4_1_6_5_4_1_6_2_7_0_7_6_3_9_7_6_6_0_0_6_4_2_1_11_5_1l11_5_0_0_2_8z">M144,138.5c0,6.3 -0.3,11.5 -0.7,11.5 -0.5,-0 -1.7,-0.7 -2.7,-1.5 -2.6,-2 -11.1,-1.9 -14.5,0.1 -9.4,5.6 -9.7,21.8 -0.5,27.9 3.3,2.1 11.7,2.2 14.9,0.1 3,-2 3.5,-2 3.5,-0.1 0,1.1 1.2,1.5 5,1.5l5,-0 0,-5 0,-4.9 5,4.9c3.7,3.8 5.7,5 8.2,5.1 8.5,0.4 13.8,-1 16.7,-4.5 2,-2.4 3.1,-1.9 3.1,1.4 0,2.9 0.1,3 5,3l5,-0 0,-25.5 0,-25.5 -5,-0 -5,-0 0,14c0,13.7 -0.7,16.4 -3,11.9 -1.9,-3.5 -7,-5.9 -12.8,-5.9 -6.4,-0 -10,1.7 -14.1,6.7l-3.1,3.8 0,-15.3 0,-15.2 -5,-0 -5,-0 0,11.5zM175.1,154c1,0.6 1.9,1.7 1.9,2.5 0,1.2 -1.4,1.5 -6,1.5 -4.3,-0 -6,-0.4 -6,-1.3 0,-3.4 5.8,-4.9 10.1,-2.7zM142.6,157.7c2,2.7 1.7,8 -0.6,10.3 -3.3,3.3 -10,2.4 -11.9,-1.6 -1.7,-3.8 -1.3,-6.3 1.5,-9.1 2.1,-2.1 3.2,-2.4 6.1,-2 1.9,0.4 4.1,1.4 4.9,2.4zM187,166.8c0,3.9 -0.6,4.2 -4.2,2.5 -2.8,-1.4 -3.3,-1.4 -5.8,0.1 -1.6,0.9 -4,1.6 -5.4,1.6 -2.7,-0 -7.6,-3.9 -7.6,-6 0,-0.6 4.2,-1 11.5,-1l11.5,-0 0,2.8z</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="description">DelivMap is an application born to help all the couriers around the world! \n Developed by upVisionMedia / alexstanciudev.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">🚚 DelivMap 🗺️ is your ultimate Android app for delivery companies! Our mission is to revolutionize the way deliveries are made by providing top-notch route optimization. </string>
    <string name="hello_blank_fragment2">📈 With our integrated system, DelivMap can effortlessly read all your destinations and create a personalized route based on real-time traffic data 🚦 and estimated delivery times ⏰, enabling you to complete more deliveries in a day, while saving valuable time. ⏱️ Say goodbye to traffic headaches and hello to efficient, happy deliveries with DelivMap! 😃📦🛵</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_registered_user_yet_sign_up">Not a registered user yet? Sign up</string>
    <string name="already_registered_sign_in">Already registered? Sign in</string>
    <string name="traffic">Traffic</string>
    <string name="search_delivery">Search delivery</string>
    <string name="hello">Hello</string>
    <string name="deliveries">Deliveries</string>
    <string name="messages">Messages</string>
    <string name="statistics">Statistics</string>
    <string name="menu_icon">menu icon</string>
    <string name="motto_home">Navigate Efficiently, Deliver Seamlessly</string>
    <string name="start_now">Start Now</string>
    <string name="deliveryTest">This is the Delivery Fragment</string>
    <string name="messages_fragment">Messages fragment</string>
    <string name="traffic_fragment">Traffic Fragment</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="pictureGallery">Select from Gallery</string>
    <string name="vector">M169.9,240c-6.6,2.6 -7.4,4 -7.4,13.3l0,8.2 32,0.5c33.3,0.5 35.2,0.8 37.5,5 0.5,1 1,4.2 1,7 0,5.2 -1.8,9.2 -4.8,10.7 -0.9,0.4 -16.1,1 -33.7,1.3l-32,0.5 -0.3,2.9c-0.2,1.6 0.2,3.2 1,3.7 0.7,0.5 10.4,0.9 21.4,0.9 24.1,-0 26,0.3 28.6,4.4 2.8,4.6 2.1,12.8 -1.6,16.4l-2.6,2.7 -23.3,0.5 -23.2,0.5 -0.3,13.2c-0.1,7.3 0.1,14.7 0.6,16.5 1.2,4.6 5.2,7.2 11.4,7.3l5.1,-0 1.2,-5c2.2,-9.7 6.3,-14.9 15.1,-19 6.9,-3.3 14.1,-3.3 20.9,-0.1 5.9,2.7 12.3,9.4 13.2,13.7 0.3,1.6 1,3.2 1.4,3.5 0.5,0.3 0.9,2.1 0.9,4l0,3.4 25.4,-0 25.5,-0 0.7,-4.8c2.3,-15.7 18.1,-25.7 33.7,-21 5.9,1.8 13.8,9.5 16,15.6 0.9,2.7 1.7,6.1 1.7,7.6 0,2.6 0.1,2.6 7,2.6 8.6,-0 13.3,-2 15.6,-6.8 1.3,-2.8 1.5,-6.1 1.2,-19.1 -0.5,-21.4 -0.8,-21.9 -16.1,-26.7 -6.9,-2.1 -8.7,-4.1 -14.2,-15.9 -8.1,-17 -11.5,-19.6 -26.9,-20.5l-8.8,-0.5 -0.2,-10.5c-0.3,-11 -1.2,-14 -5.1,-15.9 -1.3,-0.7 -21.4,-1.2 -57.8,-1.3 -48.2,-0.3 -56.4,-0.1 -59.8,1.2zM310.8,276.4c1.5,0.8 3.8,2.6 5.1,4 2.9,3.1 12.2,21.6 11.5,22.8 -0.7,1.1 -33.1,1 -33.9,-0.2 -0.8,-1.3 -1.7,-25.9 -1,-27.1 1,-1.5 15.2,-1.1 18.3,0.5z</string>
</resources>