<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>
        <item
            android:icon="@drawable/nav_profile"
            android:id="@+id/nav_profile"
            android:title="@string/profile"/>
        <item
            android:icon="@drawable/nav_stats"
            android:id="@+id/nav_stats"
            android:title="@string/statistics"/>
        <item
            android:icon="@drawable/nav_contact"
            android:id="@+id/nav_contact"
            android:title="@string/contact"/>

        <item
            android:icon="@drawable/nav_settings"
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>

        <item
            android:icon="@drawable/nav_share"
            android:id="@+id/nav_share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/about"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:icon="@drawable/nav_logout"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>